Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I11b453d82ca14af9e94ed50cb334c9bdc97bd571

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"মুখাৱয়ব আৰু <xliff:g id="WATCH">%s</xliff:g> যোগ দিয়া হৈছে"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"মুখাৱয়ব, ফিংগাৰপ্ৰিণ্ট আৰু <xliff:g id="WATCH">%s</xliff:g> যোগ দিয়া হৈছে"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"মুখাৱয়ব, ফিংগাৰপ্ৰিণ্ট আৰু <xliff:g id="WATCH">%s</xliff:g> যোগ দিয়া হৈছে"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"পৰিচয় পৰীক্ষা অন আছে"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Authenticatorৰ দ্বাৰা দূৰৰ পৰা আনলক কৰা"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ঘড়ী যোগ দিয়া হৈছে"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"আপোনাৰ ঘড়ীটো ছেট আপ কৰক"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"কীব’ৰ্ডৰ ছেটিং"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"অধিক ছেটিং"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ফাৰ্মৱেৰৰ আপডে\'ট, ইয়াৰ বিষয়ে আৰু বহুতো"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ডিভাইচৰ ব্লুটুথৰ ঠিকনা: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ডিভাইচৰ ব্লুটুথ ঠিকনা:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ডিভাইচটো পাহৰিবনে?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ডেটাৰ বাবে <xliff:g id="CARRIER">%1$s</xliff:g> ব্যৱহাৰ কৰিবনে?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"আপুনি মবাইল ডেটাৰ বাবে <xliff:g id="CARRIER2_0">%2$s</xliff:g> ব্যৱহাৰ কৰি আছে। যদি আপুনি ইয়াৰ সলনি <xliff:g id="CARRIER1">%1$s</xliff:g> ব্যৱহাৰ কৰে তেন্তে, ম’বাইল ডেটাৰ বাবে আৰু <xliff:g id="CARRIER2_1">%2$s</xliff:g> ব্যৱহাৰ কৰা নহ’ব।"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> ব্যৱহাৰ কৰক"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> এতিয়া আপোনাৰ মুখ্য ছিম"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"ম’বাইল ডেটাৰ ক’ভাৰেজ উন্নত কৰিবনে?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"উন্নতভাৱে উপলব্ধ হ’লে আপোনাৰ ডিভাইচটোক ম’বাইল ডাটাৰ বাবে স্বয়ংক্ৰিয়ভাৱে <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>লৈ সলনি কৰাৰ অনুমতি দিয়ক।"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"আপোনাৰ প্ৰতিষ্ঠানৰ বাবে কল, বাৰ্তা আৰু নেটৱৰ্কৰ ট্ৰেফিক দৃশ্যমান হ’ব পাৰে।"</string>
