--- a/res/values-de-feminine/strings.xml
+++ b/res/values-de-feminine/strings.xml
@@ -16,9 +16,8 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="vpn_replace_vpn_message" msgid="1094297700371463386">"Ya estás conectado a una red VPN. Si te conectas a otra, esta sustituirá a la VPN actual."</string>
-    <string name="vpn_lockdown_summary" msgid="4700625960550559029">"Selecciona un perfil de VPN para permanecer conectado de forma continua. Solo se permitirá el tráfico de red cuando estés conectado a esta red VPN."</string>
-    <string name="vpn_disconnected" msgid="7694522069957717501">"Desconectado de la VPN"</string>
-    <string name="user_owner" msgid="2079206733011361994">"Propietario"</string>
-    <string name="user_admin" msgid="4024553191395768119">"Administrador"</string>
+    <string name="show_dev_countdown" msgid="2936506773086395069">"{count,plural, =1{Nur noch # Schritt und du bist Entwicklerin.}other{Nur noch # Schritte und du bist Entwicklerin.}}"</string>
+    <string name="show_dev_on" msgid="2840850085134853754">"Du bist jetzt Entwicklerin!"</string>
+    <string name="show_dev_already" msgid="7041756429707644630">"Okay, du bist bereits Entwicklerin."</string>
+    <string name="user_owner" msgid="2079206733011361994">"Eigentümerin"</string>
 </resources>
