--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ફેસ અને <xliff:g id="WATCH">%s</xliff:g> ઉમેર્યા"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ફેસ, ફિંગરપ્રિન્ટ અને <xliff:g id="WATCH">%s</xliff:g> ઉમેર્યા"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ફેસ, ફિંગરપ્રિન્ટ અને <xliff:g id="WATCH">%s</xliff:g> ઉમેર્યા"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ઓળખની તપાસ ચાલુ છે"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator અનલૉક"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"વૉચ ઉમેરી"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"તમારી વૉચનું સેટઅપ કરો"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"કીબોર્ડ સેટિંગ"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"વધુ સેટિંગ"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ફર્મવેયર અપડેટ, તેના વિશે અને બીજું ઘણું બધું"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ડિવાઇસનું બ્લૂટૂથ ઍડ્રેસ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ડિવાઇસનું બ્લૂટૂથ ઍડ્રેસ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ડિવાઇસને ભૂલી જઈએ?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"મોબાઇલ ડેટા માટે <xliff:g id="CARRIER">%1$s</xliff:g>નો ઉપયોગ કરીએ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"તમે મોબાઇલ ડેટા માટે <xliff:g id="CARRIER2_0">%2$s</xliff:g>નો ઉપયોગ કરી રહ્યા છો. જો તમે બદલીને <xliff:g id="CARRIER1">%1$s</xliff:g> કરશો, તો મોબાઇલ ડેટા માટે <xliff:g id="CARRIER2_1">%2$s</xliff:g>નો ઉપયોગ નહીં થઈ શકે."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g>નો ઉપયોગ કરો"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> હવે તમારું પ્રાથમિક સિમ કાર્ડ છે"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"મોબાઇલ ડેટા કવરેજ બહેતર કરીએ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"જ્યારે તેની ઉપલબ્ધતા બહેતર હોય, ત્યારે તમારા ડિવાઇસને મોબાઇલ ડેટા માટે <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> પર ઑટોમૅટિક રીતે સ્વિચ કરવાની મંજૂરી આપો."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"કદાચ તમારી સંસ્થાને કૉલ, મેસેજ અને નેટવર્ક ટ્રાફિક દેખાઈ શકે છે."</string>
@@ -2786,7 +2788,7 @@
     <string name="backup_erase_dialog_title" msgid="5892431263348766484"></string>
     <string name="backup_erase_dialog_message" msgid="2250872501409574331">"વાઇ-ફાઇ પાસવર્ડ, બુકમાર્ક, અન્ય સેટિંગ અને ઍપ ડેટાનો બૅકઅપ લેવાનું રોકીએ, તેમજ Google સર્વર પરની બધી કૉપિને કાઢી નાખીએ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="2379053988557486162">"ડિવાઇસ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ અને કૉલ ઇતિહાસ) અને ઍપ ડેટા (જેમ કે સેટિંગ અને ઍપ દ્વારા  થયેલી ફાઇલો)નું બૅકઅપ લેવાનું રોકીએ, ઉપરાંત રિમોટ સર્વર પરની તમામ કૉપિ કાઢી નાખીએ?"</string>
-    <string name="fullbackup_data_summary" msgid="971587401251601473">"ડિવાઇસ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ અને કૉલ ઇતિહાસ) અને ઍપ ડેટા (જેમ કે સેટિંગ અને ઍપ દ્વારા સંગ્રહિત ફાઇલો)નો રિમોટલી ઑટોમૅટિક રીતે બૅકઅપ લો.\n\nજ્યારે તમે ઑટોમૅટિક રીતે બૅકઅપ ચાલુ કરો છો, ત્યારે ડિવાઇસ અને ઍપ ડેટા સમયાંતરે રિમોટલી સચવાય છે. ઍપ ડેટા એવો કોઈપણ ડેટા હોઈ શકે જેને કોઈ ઍપએ સાચવ્યો હોય (ડેવલપર સેટિંગના આધારે) જેમાં સંપર્કો, સંદેશા અને ફોટો જેવા સંભવિતપણે સંવેદનશીલ ડેટાનો સમાવેશ થાય છે."</string>
+    <string name="fullbackup_data_summary" msgid="971587401251601473">"ડિવાઇસ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ અને કૉલ ઇતિહાસ) અને ઍપ ડેટા (જેમ કે સેટિંગ અને ઍપ દ્વારા સંગ્રહિત ફાઇલો)નો રિમોટલી ઑટોમૅટિક રીતે બૅકઅપ લો.\n\nજ્યારે તમે ઑટોમૅટિક રીતે બૅકઅપ ચાલુ કરો છો, ત્યારે ડિવાઇસ અને ઍપ ડેટા સમયાંતરે રિમોટલી સચવાય છે. ઍપ ડેટા એવો કોઈપણ ડેટા હોઈ શકે જેને કોઈ ઍપએ સાચવ્યો હોય (ડેવલપર સેટિંગના આધારે) જેમાં સંપર્કો, મેસેજ અને ફોટા જેવા સંભવિતપણે સંવેદનશીલ ડેટાનો સમાવેશ થાય છે."</string>
     <string name="device_admin_settings_title" msgid="31392408594557070">"ડિવાઇસ વ્યવસ્થાપક સેટિંગ"</string>
     <string name="active_device_admin_msg" msgid="7744106305636543184">"ડિવાઇસ વ્યવસ્થાપક ઍપ"</string>
     <string name="remove_device_admin" msgid="3143059558744287259">"આ ડિવાઇસ વ્યવસ્થાપક ઍપને નિષ્ક્રિય કરો"</string>
@@ -3480,8 +3482,8 @@
     <string name="zen_custom_settings_dialog_ok" msgid="8842373418878278246">"સમજાઈ ગયું"</string>
     <string name="zen_custom_settings_notifications_header" msgid="7635280645171095398">"નોટિફિકેશન"</string>
     <string name="zen_custom_settings_duration_header" msgid="5065987827522064943">"અવધિ"</string>
-    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"સંદેશા, ઇવેન્ટ અને રિમાઇન્ડર"</string>
-    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"ખલેલ પાડશો નહીં મોડ ચાલુ હોય, ત્યારે સંદેશા, રિમાઇન્ડર અને ઇવેન્ટ મ્યૂટ કરવામાં આવશે, જેમાં તમે ઉપરની જે આઇટમને મંજૂરી આપો તે અપવાદ છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સંદેશાની સેટિંગ અનુકૂળ કરી શકો છો."</string>
+    <string name="zen_msg_event_reminder_title" msgid="5362025129007417554">"મેસેજ, ઇવેન્ટ અને રિમાઇન્ડર"</string>
+    <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"ખલેલ પાડશો નહીં મોડ ચાલુ હોય, ત્યારે મેસેજ, રિમાઇન્ડર અને ઇવેન્ટ મ્યૂટ કરવામાં આવશે, જેમાં તમે ઉપરની જે આઇટમને મંજૂરી આપો તે અપવાદ છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે મેસેજના સેટિંગ અનુકૂળ કરી શકો છો."</string>
     <string name="zen_onboarding_ok" msgid="8764248406533833392">"થઈ ગયું"</string>
     <string name="zen_onboarding_settings" msgid="2815839576245114342">"સેટિંગ"</string>
     <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"નોટિફિકેશનમાં કોઈ વિઝ્યુઅલ અથવા સાઉન્ડ નથી"</string>
@@ -3790,7 +3792,7 @@
     <string name="zen_mode_messages_title" msgid="1777598523485334405">"મેસેજ"</string>
     <string name="zen_mode_messages_header" msgid="253721635061451577">"વિક્ષેપ ઊભો કરી શકે તેવા મેસેજ"</string>
     <string name="zen_mode_messages_footer" msgid="6002468050854126331">"જે મેસેજની મંજૂરી આપી હોય તેમાં સાઉન્ડ આવે તેની ખાતરી કરવા માટે, ડિવાઇસ રિંગ વાગે તેમ સેટ કરેલું હોવાનું ચેક કરો"</string>
-    <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ માટે આવનારા સંદેશા બ્લૉક કરેલા છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સેટિંગને અનુકૂળ કરી શકો છો."</string>
+    <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ માટે આવનારા મેસેજ બ્લૉક કરેલા છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સેટિંગને અનુકૂળ કરી શકો છો."</string>
     <string name="zen_mode_all_messages_summary" msgid="3756267858343104554">"બધા મેસેજ તમને પ્રાપ્ત થઈ શકે છે"</string>
     <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"બધા કૉલ તમારા પર આવી શકે છે"</string>
     <string name="zen_mode_contacts_count" msgid="6568631261119795799">"{count,plural, =0{એકપણ નહીં}=1{1 સંપર્ક}one{# સંપર્ક}other{# સંપર્ક}}"</string>
