--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Դեմքով և ժամացույցով (<xliff:g id="WATCH">%s</xliff:g>) ապակողպումը կարգավորված է"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Դեմքով, մատնահետքով և ժամացույցով (<xliff:g id="WATCH">%s</xliff:g>) ապակողպումը կարգավորված է"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Դեմքով, մատնահետքերով և ժամացույցով (<xliff:g id="WATCH">%s</xliff:g>) ապակողպումը կարգավորված է"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"Ինքնության ստուգումը միացված է"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Authenticator-ով հեռակա ապակողպում"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Ժամացույցն ավելացված է"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Կարգավորեք ձեր ժամացույցը"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Ստեղնաշարի կարգավորումներ"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Այլ կարգավորումներ"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Ներկառուցված ծրագրի թարմացումներ, տվյալներ և այլն"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Սարքի Bluetooth հասցեն՝ <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Սարքի Bluetooth հասցեն՝\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Մոռանա՞լ սարքը"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Անցնե՞լ <xliff:g id="CARRIER">%1$s</xliff:g>-ի բջջային ինտերնետին"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Դուք օգտագործում եք <xliff:g id="CARRIER2_0">%2$s</xliff:g>-ի բջջային ինտերնետը։ Եթե անցնեք <xliff:g id="CARRIER1">%1$s</xliff:g>-ին, <xliff:g id="CARRIER2_1">%2$s</xliff:g>-ի բջջային ինտերնետն այլևս չի օգտագործվի։"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"Ընտրել <xliff:g id="CARRIER">%1$s</xliff:g>-ի ցանցը"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> քարտն այժմ ձեր հիմնական SIM քարտն է"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Բարելավե՞լ բջջային կապը"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Թույլատրեք սարքին ավտոմատ կերպով միանալ <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>-ի բջջային ինտերնետին, երբ դրա կապն ավելի ուժեղ է։"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Զանգերի, հաղորդագրությունների և ցանցի թրաֆիկի մասին տեղեկությունները կարող են հասանելի լինել ձեր կազմակերպությանը։"</string>
@@ -5347,9 +5349,9 @@
     <string name="sync_across_devices_title" msgid="3447757705383089345">"Սարքերի միջև համաժամացում"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"Սարքի դիագնոստիկա"</string>
     <string name="audio_sharing_title" msgid="4144157137502923821">"Աուդիոյի փոխանցում"</string>
-    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Փոխանցել աուդիո"</string>
+    <string name="audio_sharing_switch_title" msgid="7052827328670825701">"Փոխանցել աուդիոն"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"Զանգեր և զարթուցիչներ"</string>
-    <string name="audio_sharing_description" msgid="1660255584523640628">"Թույլ տվեք մարդկանք ձեզ հետ միասին լսել ձեր մեդիան։ Լսողները պետք է իրենց LE Audio ականջակալն ունենան։"</string>
+    <string name="audio_sharing_description" msgid="1660255584523640628">"Թույլ տվեք մարդկանք ձեզ հետ միասին լսել ձեր մեդիա ֆայլերը։ Լսողները պետք է իրենց LE Audio ականջակալն ունենան։"</string>
     <string name="audio_sharing_device_group_title" msgid="3019780581643956943">"Ակտիվ մեդիա սարքեր"</string>
     <string name="audio_sharing_call_audio_title" msgid="7978867452289583929">"Զանգի ձայներանգ"</string>
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"Նվագարկել միայն <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքում"</string>
@@ -5370,7 +5372,7 @@
     <string name="audio_sharing_summary_off" msgid="8833198995257547378">"Անջատված է"</string>
     <string name="audio_sharing_share_dialog_title" msgid="427514648577553621">"Փոխանցեք ձեր աուդիոն"</string>
     <string name="audio_sharing_share_dialog_subtitle" msgid="5208582843732057871">"<xliff:g id="DEVICE_NAME1">%1$s</xliff:g> և <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
-    <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"Փոխանցել աուդիո"</string>
+    <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"Փոխանցել աուդիոն"</string>
     <string name="audio_sharing_no_thanks_button_label" msgid="5822491984114744357">"Ոչ, շնորհակալություն"</string>
     <string name="audio_sharing_share_with_dialog_title" msgid="3934377530640830364">"Փոխանցե՞լ աուդիոն <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքին"</string>
     <string name="audio_sharing_share_with_more_dialog_title" msgid="2840069088858232267">"Փոխանցել աուդիոն մեկ այլ սարքի"</string>
@@ -5378,7 +5380,7 @@
     <string name="audio_sharing_close_button_label" msgid="2666534149100498574">"Փակել"</string>
     <string name="audio_sharing_dialog_connect_device_content" msgid="2873230647152283734">"Միացրեք մեկ այլ համատեղելի ականջակալ կամ մյուս մարդու հետ կիսվեք ձեր հոսքի անունով և գաղտնաբառով"</string>
     <string name="audio_sharing_dialog_pair_device_content" msgid="3136997898244863470">"Զուգակցեք մեկ այլ համատեղելի ականջակալ կամ մյուս մարդու հետ կիսվեք ձեր աուդիո հոսքի QR Կոդով"</string>
-    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Փոխանցում է աուդիոն"</string>
+    <string name="audio_sharing_sharing_label" msgid="1038021053061111508">"Աուդիոն փոխանցվում է"</string>
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Նոր սարքի զուգակցում"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Ցույց տալ QR կոդը"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Դուք փոխանցում եք ձեր աուդիոն"</string>
