--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"Andliti og <xliff:g id="WATCH">%s</xliff:g> bætt við"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Andliti, fingrafari og <xliff:g id="WATCH">%s</xliff:g> bætt við"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Andliti, fingraförum og <xliff:g id="WATCH">%s</xliff:g> bætt við"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"Kveikt er á auðkennisathugun"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Taka úr lás með Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Úri bætt við"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Setja upp úr"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Stillingar lyklaborðs"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Fleiri stillingar"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Fastbúnaðaruppfærslur, upplýsingar og fleira"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Bluetooth-vistfang tækis: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Bluetooth-vistfang tækis:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Gleyma tæki?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Nota <xliff:g id="CARRIER">%1$s</xliff:g> fyrir farsímagögn?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Þú ert að nota <xliff:g id="CARRIER2_0">%2$s</xliff:g> fyrir farsímagögn. Ef þú skiptir yfir í <xliff:g id="CARRIER1">%1$s</xliff:g> verður <xliff:g id="CARRIER2_1">%2$s</xliff:g> ekki lengur notað fyrir farsímagögn."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"Nota „<xliff:g id="CARRIER">%1$s</xliff:g>“"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> er nú valda SIM-kortið þitt"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Bæta tengingu farsímagagna?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Leyfa tækinu að skipta sjálfkrafa yfir í <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> fyrir farsímagögn þegar tiltækileiki þeirra er betri."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Fyrirtækið þitt getur hugsanlega séð símtölin þín, skilaboðin og netumferðina."</string>
