--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"הפנים וה-<xliff:g id="WATCH">%s</xliff:g> נוספו"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"הפנים, טביעת האצבע וה-<xliff:g id="WATCH">%s</xliff:g> נוספו"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"הפנים, טביעות האצבע וה-<xliff:g id="WATCH">%s</xliff:g> נוספו"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"בדיקת הזהות מופעלת"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏ביטול הנעילה של Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"נוסף שעון"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"הגדרת השעון"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"הגדרות מקלדת"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"הגדרות נוספות"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"עדכוני קושחה, מידע כללי ועוד"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"‏כתובת המכשיר לחיבור דרך Bluetooth‏: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"‏כתובת המכשיר לחיבור דרך Bluetooth:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"לשכוח את המכשיר?"</string>
@@ -5367,8 +5370,8 @@
     <string name="audio_sharing_stream_name_dialog_title" msgid="6706027295417556499">"השם של שידור האודיו"</string>
     <string name="audio_sharing_stream_password_dialog_title" msgid="4148196538860845705">"הסיסמה של שידור האודיו"</string>
     <string name="audio_sharing_media_device_group_title" msgid="4850674234590549565">"מכשירי מדיה אחרים"</string>
-    <string name="audio_sharing_summary_on" msgid="611197542982323788">"מצב פעיל"</string>
-    <string name="audio_sharing_summary_off" msgid="8833198995257547378">"מצב מושבת"</string>
+    <string name="audio_sharing_summary_on" msgid="611197542982323788">"התכונה פועלת"</string>
+    <string name="audio_sharing_summary_off" msgid="8833198995257547378">"התכונה מושבתת"</string>
     <string name="audio_sharing_share_dialog_title" msgid="427514648577553621">"שיתוף האודיו שלך"</string>
     <string name="audio_sharing_share_dialog_subtitle" msgid="5208582843732057871">"<xliff:g id="DEVICE_NAME1">%1$s</xliff:g> וגם <xliff:g id="DEVICE_NAME2">%2$s</xliff:g>"</string>
     <string name="audio_sharing_share_button_label" msgid="3895900668317105537">"שיתוף האודיו"</string>
