--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ਚਿਹਰੇ ਅਤੇ <xliff:g id="WATCH">%s</xliff:g> ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ਚਿਹਰੇ, ਫਿੰਗਰਪ੍ਰਿੰਟ ਅਤੇ <xliff:g id="WATCH">%s</xliff:g> ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ਚਿਹਰੇ, ਫਿੰਗਰਪ੍ਰਿੰਟਾਂ ਅਤੇ <xliff:g id="WATCH">%s</xliff:g> ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ਪਛਾਣ ਦੀ ਜਾਂਚ ਸੁਵਿਧਾ ਚਾਲੂ ਹੈ"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator ਅਣਲਾਕ"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ਘੜੀ ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ਆਪਣੀ ਘੜੀ ਦਾ ਸੈੱਟਅੱਪ ਕਰੋ"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ਕੀ-ਬੋਰਡ ਸੈਟਿੰਗਾਂ"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ਹੋਰ ਸੈਟਿੰਗਾਂ"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ਫ਼ਰਮਵੇਅਰ ਅੱਪਡੇਟ, ਇਸ ਬਾਰੇ ਅਤੇ ਹੋਰ"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ਡੀਵਾਈਸ ਦਾ ਬਲੂਟੁੱਥ ਪਤਾ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ਡੀਵਾਈਸ ਦਾ ਬਲੂਟੁੱਥ ਪਤਾ: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ਕੀ ਡੀਵਾਈਸ ਨੂੰ ਭੁੱਲਣਾ ਹੈ?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ਕੀ ਮੋਬਾਈਲ ਡਾਟੇ ਲਈ <xliff:g id="CARRIER">%1$s</xliff:g> ਵਰਤਣਾ ਹੈ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"ਤੁਸੀਂ ਮੋਬਾਈਲ ਡਾਟੇ ਲਈ <xliff:g id="CARRIER2_0">%2$s</xliff:g> ਵਰਤ ਰਹੇ ਹੋ। ਜੇ ਤੁਸੀਂ <xliff:g id="CARRIER1">%1$s</xliff:g> \'ਤੇ ਜਾਂਦੇ ਹੋ, ਤਾਂ ਹੁਣ <xliff:g id="CARRIER2_1">%2$s</xliff:g> ਮੋਬਾਈਲ ਡਾਟਾ ਲਈ ਨਹੀਂ ਵਰਤਿਆ ਜਾਵੇਗਾ।"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> ਵਰਤੋ"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> ਹੁਣ ਤੁਹਾਡਾ ਮੁੱਖ ਸਿਮ ਹੈ"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"ਮੋਬਾਈਲ ਡਾਟਾ ਕਵਰੇਜ ਵਧਾਉਣੀ ਹੈ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"ਬਿਹਤਰ ਉਪਲਬਧਤਾ ਹੋਣ \'ਤੇ, ਆਪਣੇ ਡੀਵਾਈਸ ਨੂੰ ਮੋਬਾਈਲ ਡਾਟਾ ਦੇ ਲਈ <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> \'ਤੇ ਆਪਣੇ ਆਪ ਸਵਿੱਚ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ।"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"ਕਾਲਾਂ, ਸੁਨੇਹੇ ਅਤੇ ਨੈੱਟਵਰਕ ਟਰੈਫ਼ਿਕ ਤੁਹਾਡੀ ਸੰਸਥਾ ਨੂੰ ਦਿਖਣਯੋਗ ਹੋ ਸਕਦੇ ਹਨ।"</string>
