--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"已添加面孔和“<xliff:g id="WATCH">%s</xliff:g>”"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"已添加面孔、指纹和“<xliff:g id="WATCH">%s</xliff:g>”"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"已添加面孔、指纹和“<xliff:g id="WATCH">%s</xliff:g>”"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"身份检查功能已开启"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"远程身份验证器解锁"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"已添加手表"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"设置手表"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"键盘设置"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"更多设置"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"固件更新、本机信息以及更多设置"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"设备的蓝牙地址：<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"设备的蓝牙地址：\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"取消保存？"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"要使用<xliff:g id="CARRIER">%1$s</xliff:g>的移动数据吗？"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"您目前使用的是<xliff:g id="CARRIER2_0">%2$s</xliff:g>的移动数据。如果切换到<xliff:g id="CARRIER1">%1$s</xliff:g>，系统将不再使用<xliff:g id="CARRIER2_1">%2$s</xliff:g>的移动数据。"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"使用“<xliff:g id="CARRIER">%1$s</xliff:g>”"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g>现在是您的主 SIM 卡"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"改善移动网络信号覆盖范围？"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"允许设备在 <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> 移动网络信号较强时自动切换到此类网络。"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"通话、消息和网络流量或许会对贵组织可见。"</string>
@@ -5355,11 +5357,11 @@
     <string name="audio_sharing_call_audio_description" msgid="6573621048260616924">"仅通过“<xliff:g id="DEVICE_NAME">%1$s</xliff:g>”播放"</string>
     <string name="audio_sharing_test_sound_title" msgid="6438868185641027763">"播放测试音效"</string>
     <string name="audio_sharing_test_sound_description" msgid="4072462502371937399">"每个正在收听的人都应该能听到"</string>
-    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"音频流设置"</string>
+    <string name="audio_sharing_stream_settings_title" msgid="1374391898689242036">"音频串流设置"</string>
     <string name="audio_sharing_stream_name_title" msgid="8156859441897180940">"名称"</string>
     <string name="audio_sharing_stream_password_title" msgid="7026649168165764602">"密码"</string>
     <string name="audio_sharing_stream_compatibility_title" msgid="5690947186724469918">"提高兼容性"</string>
-    <string name="audio_sharing_stream_compatibility_description" msgid="8170241188606110963">"通过降低音频质量，帮助某些设备（例如助听器）连接"</string>
+    <string name="audio_sharing_stream_compatibility_description" msgid="8170241188606110963">"通过降低音频质量，帮助某些设备（如助听器）进行连接。"</string>
     <string name="audio_sharing_stream_compatibility_disabled_description" msgid="2586408353546825682">"关闭“音频分享”功能以配置兼容性"</string>
     <string name="audio_sharing_nearby_audio_title" msgid="4795438407040677177">"收听附近的音频"</string>
     <string name="audio_sharing_footer_description" msgid="4786942197840271680">"“音频分享”功能支持 Auracast™"</string>
@@ -5415,7 +5417,7 @@
     <string name="audio_streams_dialog_retry" msgid="4456843891970998556">"重试"</string>
     <string name="audio_streams_dialog_listen_to_audio_stream" msgid="8585253007762261528">"收听音频流"</string>
     <string name="audio_streams_dialog_control_volume" msgid="7615062686016713544">"该音频流将通过“<xliff:g id="DEVICE_NAME">%1$s</xliff:g>”播放。您可以使用这部设备控制音量。"</string>
-    <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"无法收听音频流"</string>
+    <string name="audio_streams_dialog_cannot_listen" msgid="4432257183698209966">"无法收听音频串流"</string>
     <string name="audio_streams_dialog_default_device" msgid="6159800303379303266">"已连接的兼容耳机"</string>
     <string name="audio_streams_activity_title" msgid="6766869545769831935">"音频串流"</string>
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"没有密码"</string>
@@ -5429,7 +5431,7 @@
     <string name="audio_streams_qr_code_page_title" msgid="9169570362469544641">"音频流二维码"</string>
     <string name="audio_streams_qr_code_page_password" msgid="7268475614131297060">"密码：<xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="audio_streams_qr_code_page_description" msgid="1317961663706630428">"若要收听“<xliff:g id="STREAM_NAME">%1$s</xliff:g>”，其他人可先为各自的 Android 设备连接兼容耳机，然后扫描此二维码。"</string>
-    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"查找音频流"</string>
+    <string name="audio_streams_main_page_title" msgid="1838380471076527639">"查找音频串流"</string>
     <string name="audio_streams_main_page_subtitle" msgid="3251995732921981539">"收听其他设备分享的音频或附近的 Auracast 广播音频"</string>
     <string name="audio_streams_main_page_device_title" msgid="2635744035523908253">"您的音频设备"</string>
     <string name="audio_streams_main_page_no_device_summary" msgid="2936000845397406389">"连接兼容耳机"</string>
