--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"መልክ እና <xliff:g id="WATCH">%s</xliff:g> ታክለዋል"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"መልክ፣ የጣት አሻራ እና <xliff:g id="WATCH">%s</xliff:g> ታክለዋል"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"መልክ፣ የጣት አሻራዎች እና <xliff:g id="WATCH">%s</xliff:g> ታክለዋል"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"የማንነት መፈተሻ በርቷል"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"የርቀት መቆጣጠሪያ ማረጋገጫ ተከፍቷል"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"የእጅ ሰዓት ታክሏል"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"የእጅ ሰዓትዎን ያዋቅሩ"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"የቁልፍ ሰሌዳ ቅንብሮች"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ተጨማሪ ቅንብሮች"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"የፈርምዌር ዝማኔዎች፣ ስለ እና ሌሎችም"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"የመሣሪያ የብሉቱዝ አድራሻ፦ <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"የመሣሪያ የብሉቱዝ አድራሻ፦\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"መሣሪያ ይረሳ?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ለተንቀሳቃሽ ውሂብ <xliff:g id="CARRIER">%1$s</xliff:g> ን ይጠቀም?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"ለተንቀሳቃሽ ውሂብ <xliff:g id="CARRIER2_0">%2$s</xliff:g> ን እየተጠቀሙ ነዎት። ወደ <xliff:g id="CARRIER1">%1$s</xliff:g> ከቀየሩ፣ <xliff:g id="CARRIER2_1">%2$s</xliff:g> ከእንግዲህ ለተንቀሳቃሽ ውሂብ ጥቅም ላይ አይውልም።"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g>ን ይጠቀሙ"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> አሁን የእርስዎ ዋና ሲም ነው"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"የተንቀሳቃሽ ስልክ ውሂብ ሽፋን ይሻሻል?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> የተሻለ ተገኝነት ሲኖረው መሣሪያዎ በራስ-ሰር ወደ ተንቀሳቃሽ ስልክ ውሂብ እንዲቀይር ይፍቀዱ።"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"ጥሪዎች፣ መልዕክቶች እና የአውታረ መረብ ትራፊክ ለድርጅትዎ ሊታይ ይችላል።"</string>
