--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"تمت إضافة وجه و\"<xliff:g id="WATCH">%s</xliff:g>\"."</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"تمت إضافة وجه وبصمة إصبع و\"<xliff:g id="WATCH">%s</xliff:g>\"."</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"تمت إضافة وجه وبصمات أصابع و\"<xliff:g id="WATCH">%s</xliff:g>\"."</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ميزة \"التحقّق من الهوية\" مفعَّلة"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏فتح قفل Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"تمت إضافة الساعة"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ضبط إعدادات ساعتك"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"إعدادات لوحة المفاتيح"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"إعدادات إضافية"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"تحديثات للبرامج الثابتة، ولمحة عامة عنها، وغير ذلك"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"عنوان البلوتوث للجهاز: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"عنوان البلوتوث للجهاز:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"هل تريد إلغاء إقران الجهاز؟"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"هل تريد بيانات الجوّال من <xliff:g id="CARRIER">%1$s</xliff:g>؟"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"أنت تستخدم <xliff:g id="CARRIER2_0">%2$s</xliff:g> للاتصال ببيانات الجوّال. عند التبديل إلى <xliff:g id="CARRIER1">%1$s</xliff:g>، لن يتم استخدام <xliff:g id="CARRIER2_1">%2$s</xliff:g> مرة أخرى للاتصال ببيانات الجوّال."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"استخدام <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"‏تم ضبط <xliff:g id="NEW_SIM">%1$s</xliff:g> كشريحة SIM الرئيسية"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"أتريد تحسين تغطية بيانات الجوّال؟"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"اسمح لجهازك بالتبديل تلقائيًا إلى استخدام \"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>\" لبيانات الجوّال عند توفّرها بشكل أفضل."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"قد تكون المكالمات والرسائل وحركة بيانات الشبكة مرئية لمؤسستك."</string>
