--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"चेहरा और <xliff:g id="WATCH">%s</xliff:g> सेट अप की गई"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"चेहरा, फ़िंगरप्रिंट, और <xliff:g id="WATCH">%s</xliff:g> सेट अप की गई"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"चेहरा, फ़िंगरप्रिंट, और <xliff:g id="WATCH">%s</xliff:g> सेट अप की गई"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"पहचान की पुष्टि करने की सुविधा चालू है"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator अनलॉक करें"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"स्मार्टवॉच जोड़ दी गई"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"अपनी स्मार्ट वॉच सेट अप करें"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"कीबोर्ड की सेटिंग"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"अन्य सेटिंग"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"फ़र्मवेयर अपडेट, इसकी जानकारी, और अन्य सेटिंग"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"डिवाइस का ब्लूटूथ पता: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"डिवाइस के ब्लूटूथ का पता:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"डिवाइस को हटाना है?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"मोबाइल डेटा के लिए <xliff:g id="CARRIER">%1$s</xliff:g> का इस्तेमाल करें?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"मोबाइल डेटा के लिए आप <xliff:g id="CARRIER2_0">%2$s</xliff:g> इस्तेमाल कर रहे हैं. अगर आप <xliff:g id="CARRIER1">%1$s</xliff:g> का इस्तेमाल करते हैं, तो <xliff:g id="CARRIER2_1">%2$s</xliff:g> को मोबाइल डेटा के लिए इस्तेमाल नहीं किया जाएगा."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> का इस्तेमाल करें"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> अब आपका मुख्य सिम है"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"मोबाइल डेटा कवरेज बढ़ाना है?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"बेहतर नेटवर्क उपलब्ध होने पर, डिवाइस को मोबाइल डेटा के लिए <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> पर अपने-आप स्विच होने की अनुमति दें."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"कॉल, मैसेज, और नेटवर्क ट्रैफ़िक की जानकारी आपके संगठन को दिख सकती है."</string>
