--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"ເພີ່ມໃບໜ້າ ແລະ <xliff:g id="WATCH">%s</xliff:g> ແລ້ວ"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ເພີ່ມໃບໜ້າ, ລາຍນິ້ວມື ແລະ <xliff:g id="WATCH">%s</xliff:g> ແລ້ວ"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ເພີ່ມໃບໜ້າ, ລາຍນິ້ວມື ແລະ <xliff:g id="WATCH">%s</xliff:g> ແລ້ວ"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ການກວດສອບຕົວຕົນເປີດຢູ່"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"ການປົດລັອກ Authenticator ຈາກທາງໄກ"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ເພີ່ມໂມງແລ້ວ"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ຕັ້ງຄ່າໂມງຂອງທ່ານ"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ການຕັ້ງຄ່າແປ້ນພິມ"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ການອັບເດດເຟີມແວ, ກ່ຽວກັບ ແລະ ອື່ນໆ"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ທີ່ຢູ່ Bluetooth ຂອງອຸປະກອນ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ທີ່ຢູ່ Bluetooth ຂອງອຸປະກອນ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ລືມອຸປະກອນບໍ?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ໃຊ້ <xliff:g id="CARRIER">%1$s</xliff:g> ສຳລັບອິນເຕີເນັດມືຖືບໍ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"ທ່ານກຳລັງໃຊ້ <xliff:g id="CARRIER2_0">%2$s</xliff:g> ສຳລັບອິນເຕີເນັດມືຖື. ຫາກທ່ານສະຫຼັບໄປໃຊ້ <xliff:g id="CARRIER1">%1$s</xliff:g>, <xliff:g id="CARRIER2_1">%2$s</xliff:g> ຈະບໍ່ສາມາດຖືກໃຊ້ເຊື່ອມຕໍ່ອິນເຕີເນັດໄດ້ອີກຕໍ່ໄປ."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"ໃຊ້ <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> ເປັນຊິມຫຼັກຂອງທ່ານແລ້ວຕອນນີ້"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"ປັບປຸງຄວາມຄອບຄຸມຂອງອິນເຕີເນັດມືຖືບໍ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"ອະນຸຍາດໃຫ້ອຸປະກອນຂອງທ່ານສະຫຼັບໄປຫາ <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> ເພື່ອໃຊ້ອິນເຕີເນັດມືຖືໂດຍອັດຕະໂນມັດເມື່ອສະຖານະຂອງມັນດີກວ່າ."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"ການໂທ, ຂໍ້ຄວາມ ແລະ ທຣາບຟິກເຄືອຂ່າຍອາດສະແດງໃຫ້ອົງກອນຂອງທ່ານເຫັນໄດ້."</string>
