--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"മുഖവും <xliff:g id="WATCH">%s</xliff:g> എന്നതും ചേർത്തു"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"മുഖവും ഫിംഗർപ്രിന്റും <xliff:g id="WATCH">%s</xliff:g> എന്നതും ചേർത്തു"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"മുഖവും ഫിംഗർപ്രിന്റുകളും <xliff:g id="WATCH">%s</xliff:g> എന്നതും ചേർത്തു"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"ഐഡന്റിറ്റി പരിശോധന ഓണാണ്"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"വിദൂര Authenticator അൺലോക്ക്"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"വാച്ച് ചേർത്തു"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"നിങ്ങളുടെ വാച്ച് സജ്ജീകരിക്കൂ"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"കീബോർഡ് ക്രമീകരണം"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"കൂടുതൽ ക്രമീകരണം"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ഫേംവെയർ അപ്‌ഡേറ്റുകൾ, ആമുഖം എന്നിവയും മറ്റും"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ഉപകരണത്തിന്റെ Bluetooth വിലാസം: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ഉപകരണത്തിന്റെ Bluetooth വിലാസം:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ഉപകരണം മറക്കണോ?"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"മൊബൈൽ ഡാറ്റയ്ക്ക് <xliff:g id="CARRIER">%1$s</xliff:g> വേണോ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"നിങ്ങൾ മൊബൈൽ ഡാറ്റയ്ക്ക് <xliff:g id="CARRIER2_0">%2$s</xliff:g> ഉപയോഗിക്കുന്നു. നിങ്ങൾ <xliff:g id="CARRIER1">%1$s</xliff:g> എന്നതിലേക്ക് മാറുകയാണെങ്കിൽ മൊബൈൽ ഡാറ്റ ലഭിക്കാൻ <xliff:g id="CARRIER2_1">%2$s</xliff:g> എന്നത് ഇനിമുതൽ ഉപയോഗിക്കാനാവില്ല."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> ഉപയോഗിക്കുക"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"<xliff:g id="NEW_SIM">%1$s</xliff:g> ആണ് ഇപ്പോൾ നിങ്ങളുടെ പ്രാഥമിക സിം"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"മൊബൈൽ ഡാറ്റ മെച്ചപ്പെടുത്തണോ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> SIM-ൽ മെച്ചപ്പെട്ട നെറ്റ്‍വര്‍ക്ക് ഉള്ളപ്പോൾ മൊബൈൽ ഡാറ്റയ്ക്കായി അതിലേക്ക് സ്വയമേവ മാറാൻ നിങ്ങളുടെ ഉപകരണത്തെ അനുവദിക്കുക."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"കോളുകളും സന്ദേശങ്ങളും നെറ്റ്‍വര്‍ക്ക് ട്രാഫിക്കും നിങ്ങളുടെ സ്ഥാപനത്തിന് ദൃശ്യമായേക്കാം."</string>
