--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -411,7 +411,8 @@
     <string name="security_settings_face_watch_preference_summary" msgid="5817376447253802793">"چہرہ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"چہرہ، فنگر پرنٹ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"چہرہ، فنگر پرنٹس اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
-    <string name="mandatory_biometrics_prompt_description" msgid="8928849367818726432">"شناختی چیک آن ہے"</string>
+    <!-- no translation found for mandatory_biometrics_prompt_description (6790144699440050735) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏Remote Authenticator کو غیر مقفل کریں"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"گھڑی کو شامل کیا گیا"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"اپنی گھڑی سیٹ اپ کریں"</string>
@@ -838,6 +839,8 @@
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"کی بورڈ کی ترتیبات"</string>
     <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"مزید ترتیبات"</string>
     <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"فرم ویئر اپ ڈیٹس، تعارف اور مزید بہت کچھ"</string>
+    <!-- no translation found for bluetooth_device_tip_support (6072338493592606897) -->
+    <skip />
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"آلے کا بلوٹوتھ پتہ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"آلے کا بلوٹوتھ پتہ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"آلہ بھول جائیں؟"</string>
@@ -1335,8 +1338,7 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"موبائل ڈیٹا کیلئے <xliff:g id="CARRIER">%1$s</xliff:g> استعمال کریں؟"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"موبائل ڈیٹا کے لیے آپ <xliff:g id="CARRIER2_0">%2$s</xliff:g> استعمال کر رہے ہیں۔ اگر آپ <xliff:g id="CARRIER1">%1$s</xliff:g> پر سوئچ کریں گے تو <xliff:g id="CARRIER2_1">%2$s</xliff:g> کو موبائل ڈیٹا کے لیے مزید استعمال نہیں کیا جائے گا۔"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> استعمال کریں"</string>
-    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
-    <skip />
+    <string name="sim_preferred_message" msgid="4894337280925553873">"‏<xliff:g id="NEW_SIM">%1$s</xliff:g> اب آپ کی بنیادی SIM ہے"</string>
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"موبائل ڈیٹا کوریج بہتر بنائیں؟"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"اپنے آلے کو اجازت دیں کہ وہ موبائل ڈیٹا کے لیے خودکار طور پر <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> پر سوئچ کرے جب اس میں بہتر دستیابی ہو۔"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"کالز، پیغامات اور نیٹ ورک ٹریفک آپ کی تنظیم کے لیے مرئی ہو سکے ہیں۔"</string>
